[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LabelLista" type="Label" parent="."]
margin_left = 400.0
margin_top = -6.0
margin_right = 669.0
margin_bottom = 26.0
text = "LISTA"
valign = 1

[node name="ButtonIniciar" type="Button" parent="."]
margin_left = 297.0
margin_top = 33.0
margin_right = 361.0
margin_bottom = 72.0
text = "OK"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 383.0
margin_top = 28.0
margin_right = 653.0
margin_bottom = 161.0
color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )

[node name="resposta" type="RichTextLabel" parent="ColorRect"]
margin_left = 5.0
margin_top = 7.0
margin_right = 262.0
margin_bottom = 122.0

[node name="exercicio 1" type="Label" parent="."]
margin_left = 203.0
margin_top = 44.0
margin_right = 282.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 40, 11 )
text = "EXERCICIO 1"

[node name="exercicio 2" type="Label" parent="."]
margin_left = 149.0
margin_top = 112.0
margin_right = 228.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 40, 11 )
text = "EXERCICIO 2"

[node name="item" type="LineEdit" parent="."]
margin_left = 256.0
margin_top = 105.0
margin_right = 370.0
margin_bottom = 130.0

[node name="cliqueAqui" type="Button" parent="."]
margin_left = 469.0
margin_top = 164.0
margin_right = 655.0
margin_bottom = 216.0
text = "Clique Aqui"

[node name="ex4" type="Label" parent="."]
margin_left = 123.0
margin_top = 176.0
margin_right = 242.0
margin_bottom = 206.0
text = "EXERCICIO 4"
align = 1
valign = 1

[node name="texto" type="LineEdit" parent="."]
margin_left = 235.0
margin_top = 169.0
margin_right = 354.0
margin_bottom = 207.0

[node name="ex3" type="Label" parent="."]
margin_left = 142.0
margin_top = 270.0
margin_right = 262.0
margin_bottom = 307.0
text = "EXERCICIO 3"
align = 1
valign = 1

[node name="numeros" type="LineEdit" parent="."]
margin_left = 258.0
margin_top = 236.0
margin_right = 557.0
margin_bottom = 338.0
text = "Clique em \"texto\" para ver o texto"
align = 1

[node name="buttonText" type="Button" parent="."]
margin_left = 572.0
margin_top = 267.0
margin_right = 650.0
margin_bottom = 311.0
text = "texto"
icon_align = 1

[node name="buttonNumero" type="Button" parent="."]
margin_left = 362.0
margin_top = 171.0
margin_right = 424.0
margin_bottom = 206.0
text = "n√∫mero"

[connection signal="pressed" from="ButtonIniciar" to="." method="_on_ButtonIniciar_pressed"]
[connection signal="pressed" from="cliqueAqui" to="." method="_on_cliqueAqui_pressed"]
[connection signal="pressed" from="buttonText" to="." method="_on_buttonText_pressed"]
[connection signal="pressed" from="buttonNumero" to="." method="_on_buttonNumero_pressed"]
